[spring-data-cassandra] Merged master to introduce new module